-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 161102) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??112002 (v2.2.0-pre6)
	- edi-entries: edi-35 added
	- fixed: more curses fixes
	- fixed: ecaplay - -k and ctrl-c cleanup bugs
	- fixed: ecaplay - accept filenames containing whitespace
	- fixed: ecafixdc - don't process files that have zero 
	         dc-offset
	- fixed: compilation fixes for solaris+gcc combo
	- fixed: -y option was not working; broken since 2.2.0-pre1
07112002 (v2.2.0-pre5)
	- edi-entries: edi-29 closed
	- added: ecasound emacs interface, ecasound.el, is now 
	   	 distributed with ecasound (ecatools/ecasound.el);
		 ecasound.el is installed to ecasound's data 
		 directory (default /usr/local/share/ecasound)
	- added: libkvutils_tester, unit tester for libkvutils
	- added: ecamonitor - 'q' to quit
	- added: --nodaemon and --daemon-port=XXX ecasound options
	- added: documentation about the daemon functionality 
	         to ecasound(1)
	- added: ecamonitor.1 man page
	- added: NetECI documentation to programmer's guide
	- changed: rpm spec file unified with the spec file used
		   to build PlanetCCRMA's ecasound packages
	- changed: pyecasound license from GPL to LGPL
	- changed: the C++ ECI implementation, the 
		   ECA_CONTROL_INTERFACE class, moved from libecasound
		   to libecasoundc; now also under LGPL